# Legacy-Pipeline-Converter

./: .gitignore  AGENT_FAILURES.md  LICENSE  PROJECT_STATE.md  README.md  pyproject.toml
data/: legacy_pipeline.json
data/sources/: customers.csv  orders.csv
docs/: AGENTS.md  AGENT_FAILURES.md  PROJECT_STATE.md  SPEC.md  clarifications-v1.md  clarifications-v2.md  implementation-plan-v1.md  implementation-plan-v2.md
scripts/: run_pipeline.py
src/legacy_pipeline_converter/: __init__.py  api.py  dbt_artifacts.py  diagnostics.py  errors.py  io.py  models.py  ordering.py  parser.py  report.py  source_mapping.py  sql_generator.py  validator.py
src/legacy_pipeline_converter/adapters/: __init__.py  base.py  json_adapter.py
tests/: conftest.py  test_adapters.py  test_api.py  test_dbt_artifacts.py  test_diagnostics.py  test_io.py  test_ordering.py  test_parser.py  test_report.py  test_source_mapping.py  test_sql_generator.py  test_validator.py
tests/fixtures/: legacy_pipeline.json
